--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div class="wrapper">
         <div class="header">
+            <div class="shadow"></div>
             <h1>Product Search</h1>
             <input type="text" class="search" placeholder="Enter the product name" />
         </div>
