--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
         <div class="header">
             <div class="shadow"></div>
-            <h1>Product Search</h1>
+            <h1 class="text-shine">Product Search</h1>
             <input type="text" class="search" placeholder="Enter the product name" />
         </div>
         <div class="product-list">
@@ -47,6 +47,7 @@
                 <li>RIS | KEYMOD | MLOCK HANDGUARDS</li>
                 <li>CHARGING HANDLES</li>
                 <li>MAGAZINE RELEASES</li>
+                
             </ul>
         </div>
     </div>
